tests/ui/consts/const-promoted-opaque.string.stderr
error[E0391]: cycle detected when computing type of opaque `helper::Foo::{opaque#0}`
  --> $DIR/const-promoted-opaque.rs:14:20
   |
LL |     pub type Foo = impl Sized;
   |                    ^^^^^^^^^^
   |
note: ...which requires borrow-checking `helper::FOO`...
  --> $DIR/const-promoted-opaque.rs:18:5
   |
LL |     pub const FOO: Foo = String::new();
   |     ^^^^^^^^^^^^^^^^^^
note: ...which requires promoting constants in MIR for `helper::FOO`...
  --> $DIR/const-promoted-opaque.rs:18:5
   |
LL |     pub const FOO: Foo = String::new();
   |     ^^^^^^^^^^^^^^^^^^
note: ...which requires const checking `helper::FOO`...
  --> $DIR/const-promoted-opaque.rs:18:5
   |
LL |     pub const FOO: Foo = String::new();
   |     ^^^^^^^^^^^^^^^^^^
   = note: ...which requires computing whether `helper::Foo` is freeze...
   = note: ...which requires evaluating trait selection obligation `helper::Foo: core::marker::Freeze`...
   = note: ...which again requires computing type of opaque `helper::Foo::{opaque#0}`, completing the cycle
note: cycle used when computing type of `helper::Foo::{opaque#0}`
  --> $DIR/const-promoted-opaque.rs:14:20
   |
LL |     pub type Foo = impl Sized;
   |                    ^^^^^^^^^^
   = note: see https://rustc-dev-guide.rust-lang.org/overview.html#queries and https://rustc-dev-guide.rust-lang.org/query.html for more information

error: aborting due to previous error

For more information about this error, try `rustc --explain E0391`.
